src/main/java/com/example/copro/global/error/dto/ErrorResponse.java
package com.example.copro.global.error.dto;

public record ErrorResponse(
        int statusCode,
        String message
) {
}